fix(ffe-datepicker): fikser en alignment-bug mellom mnd og år i calendar header

--- a/packages/ffe-datepicker/less/calendar.less
+++ b/packages/ffe-datepicker/less/calendar.less
@@ -37,6 +37,7 @@
     }
 
     &__month,
+    &__year,
     &__title {
         padding-right: var(--ffe-spacing-xs);
         color: var(--ffe-color-foreground-emphasis);
